src/test/resources/typeSystemTestModels/valid/enums/EnumModifiersValid.java
package typeSystemTestModels.valid.enums;

public class EnumModifiersValid{

  public enum A {

  }

  private enum B{

  }

  protected enum C {

  }

}